--- a/es.strings
+++ b/es.strings
@@ -1,10 +1,10 @@
-"HEY_THERE_ALERT" = "Hey There!";
-"NO_THANKS_ALERT" = "No Thanks";
-"TWEET_TO_REMOVE_ADS" = "Tweeting will remove YT ++ ads for 1.5 weeks. You can tweet for FREE every week. Your support is awesome!";
-"MISSING_INFORMATION" = "Missing Information";
-"FILL_OUT_ALL_INFO" = "Make sure you fill out all of the information!";
-"PAYMENT_THANK_YOU_TITLE" = "Thanks!";
-"PAYMENT_CONFIRMATION" = "You have removed ads for YT ++ forvever. Thanks for your support it means a ton!";
+"HEY_THERE_ALERT" = "Hey!";
+"NO_THANKS_ALERT" = "No gracias";
+"TWEET_TO_REMOVE_ADS" = "Twittear eliminará los anuncios YT ++ por 1.5 semanas. Puedes twittear GRATIS todas las semanas. Tu apoyo es increible!"; 
+"MISSING_INFORMATION" = "Falta información";
+"FILL_OUT_ALL_INFO" = "Asegurate de rellenar todas la información!";
+"PAYMENT_THANK_YOU_TITLE" = "Gracias!";
+"PAYMENT_CONFIRMATION" = "Has eliminado los anuncios para YT ++ para siempre. Gracias por tu apoyo, significa mucho!";
 "PAYMENT_OK" = "Okay!";
 "WALKING" = "Andando";
 "RUNNING" = "Corriendo";
@@ -20,7 +20,7 @@
 "45MINUTE" = "45 Minutos";
 "FOREVER" = "Siempre";
 "DONATE" = "Donar";
-"SUPPORTUS" = "Pinche aquí para Apoyarnos";
+"SUPPORTUS" = "Pulse aquí para apoyarnos";
 "SUPPORTUSDESC" = "Ayuda a mantener PokeGo++ 2.0. Apoye a nuestro equipo y desarrolladores donando.";
 "USAGE" = "Opciones de Uso";
 "SHOWJOY" = "Mostrar Joystick";
@@ -99,21 +99,21 @@
 "CUSTOMSPEED" = "Custom Speed (0-16)";
 "HIDEGYM" = "Hide Gym Mode Button";
 "SPECIALLIST" = "Special Pokémon List";
-"COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Hide Cooldown Timer Button";
-"HIDETAPTOWALK" = "Hide Tap to Walk Button";
-"HIDEGPX" = "Hide GPX Button";
-"HIDEPREVIOUSLOC" = "Hide Previous Button";
-"HIDEIV" = "Hide IV Button";
-"PARTNERCOORDS" = "Partners";
-"PARTNERPARAMS" = "Options";
-"PARTNERCOORDSDESC" = "For access to these premium coords, you may require a subscription. Please contact the provider directly.";
-"OVERRIDE"= "Startup/Forever";
-"FORCEUPDATES" = "Force Location Updates";
+"COOLDOWN" = "Tiempo de espera";
+"HIDECOOLDOWN" = "Ocultar botón de tiempo de espera";
+"HIDETAPTOWALK" = "Ocultar botón Pulse para caminar";
+"HIDEGPX" = "Ocultar botón GPX";
+"HIDEPREVIOUSLOC" = "Ocultar botón anterior";
+"HIDEIV" = "Ocultar botón IV";
+"PARTNERCOORDS" = "Afiliados";
+"PARTNERPARAMS" = "Opciones";
+"PARTNERCOORDSDESC" = "Para acceder a estar coordenadas premium necesitas una suscripción. Por favor contacte con el proveedor directamente.";
+"OVERRIDE"= "En Comienzo/Siempre";
+"FORCEUPDATES" = "Forzar actualización de ubicación";
 "SPOOFING" = "Spoofing";
-"KEY" = "Key";
-"LOOPGPX" = "Loop GPX Route";
-"PREVIOUSLOCATION" = "Previous Location";
-"GENERATEGPX" = "Generate GPX";
-"SECONDARY" = "Secondary Device";
-"SECONDARYMSG" = "Are you activating a second device? (Tier 2 License Required)";
+"KEY" = "Clave";
+"LOOPGPX" = "Ruta GPX en bucle";
+"PREVIOUSLOCATION" = "Anterior localización";
+"GENERATEGPX" = "Generar GPX";
+"SECONDARY" = "Segundo dispositivo";
+"SECONDARYMSG" = "¿Estas activando un segundo dispositivo? (Licencia del Tier 2 necesaria)";
