--- a/pt-BR.strings
+++ b/pt-BR.strings
@@ -1,11 +1,11 @@
-"HEY_THERE_ALERT" = "Hey There!";
-"NO_THANKS_ALERT" = "No Thanks";
-"TWEET_TO_REMOVE_ADS" = "Tweeting will remove YT ++ ads for 1.5 weeks. You can tweet for FREE every week. Your support is awesome!";
-"MISSING_INFORMATION" = "Missing Information";
-"FILL_OUT_ALL_INFO" = "Make sure you fill out all of the information!";
-"PAYMENT_THANK_YOU_TITLE" = "Thanks!";
-"PAYMENT_CONFIRMATION" = "You have removed ads for YT ++ forvever. Thanks for your support it means a ton!";
-"PAYMENT_OK" = "Okay!";
+"HEY_THERE_ALERT" = "Olá!";
+"NO_THANKS_ALERT" = "Não, obrigado.";
+"TWEET_TO_REMOVE_ADS" = "Tweetar irá remover propagandas em seu YT++ por 1 semana e meia. Você pode tweetar de GRAÇA toda semana. Obrigado pelo suporte!";
+"MISSING_INFORMATION" = "Faltando Informações!";
+"FILL_OUT_ALL_INFO" = "Preencha todas as informações!";
+"PAYMENT_THANK_YOU_TITLE" = "Obrigado!";
+"PAYMENT_CONFIRMATION" = "Você removeu as propagandas de seu YT++ para sempre. Obrigado pelo seu suporte!";
+"PAYMENT_OK" = "OK!";
 "WALKING" = "Andando";
 "RUNNING" = "Correndo";
 "BIKING" = "Pedalando";
@@ -23,26 +23,26 @@
 "SUPPORTUS" = "Clique para nos ajudar";
 "SUPPORTUSDESC" = "Ajude a manter PokeGo++ 2.0 funcionando! Ajude nosso time e desenvolvedores com doações";
 "USAGE" = "Opções de uso";
-"SHOWJOY" = "Mostrar joystick";
+"SHOWJOY" = "Mostrar Joystick";
 "DISMISSWALK" = "Dispensar mapa em “Andar até aqui”";
-"ENABLETELE" = "Habilitar teleporte";
+"ENABLETELE" = "Habilitar Teleporte";
 "WARNING" = "Aviso!";
-"TELEDESC" = "Teleportar-se pode levar a recisão da sua conta da Niantic. Nós não somos responsáveis se o teleporte levar a qualquer tipo de banimento! Você foi avisado.";
+"TELEDESC" = "Teleportar-se pode levar a recisão da sua conta pela Niantic. Nós não somos responsáveis se o teleporte levar a qualquer tipo de banimento! Você foi avisado.";
 "OK" = "Ok";
 "CANCEL" = "Cancelar";
 "CLOSE" = "Fechar";
 "DISMISSTELE" = "Dispensar mapa em “Teleportar até aqui”";
 "DISABLEIV" = "Desabilitar notificação de IV";
 "IVLENGTH" = "Duração da notificação de IV (ms)";
-"IVLENGTHDESC" = "Insira milissegundos de exibição da duração da notificação de IV e movimentos quando encontrar Pokémon selvagem";
-"FAKELOCATION" = "Falsa localização";
+"IVLENGTHDESC" = "Insira milissegundos de exibição da duração da notificação de IV e movimentos quando encontrar um Pokémon selvagem";
+"FAKELOCATION" = "Falsa Localização";
 "SAVEFAKE" = "Tempo para salvar a localização";
 "SAVEFAKEDESC" = "Por quanto tempo deve salvar a localização após o app ser fechado";
 "SHOWCOORDS" = "Exibir botão de coordenadas no mapa";
 "SHOWCOORDSDESC" = "Habilita botão de coordenadas no mapa. Se clicado, uma janela irá abrir exibindo as coordenadas da sua localização atual. Coordenadas podem ser copiadas. ";
 "URL" = "URL:";
 "COORDSSERVER" = "Lista de coordenadas do servidor";
-"COORDSSERVERDESC" = "Opcional: Insira URL complete de um servidor de coordenadas. Pode ser um endereço público ou privado. Se preenchido, irá recuperar a lista de coordenadas armazenadas em um arquivo \”coords.txt\” acessível na URL introduzida. Essas coordenadas serão preenchidas na lista de coordenadas quando usar o recurso Snipe.";
+"COORDSSERVERDESC" = "Opcional: Insira a URL complete de um servidor de coordenadas. Pode ser um endereço público ou privado. Se preenchido, irá recuperar a lista de coordenadas armazenadas em um arquivo \”coords.txt\” acessível na URL introduzida. Essas coordenadas serão preenchidas na lista de coordenadas quando usar o recurso Snipe.";
 "CONTACTUS" = "Contate-nos";
 "REDDIT" = "Reddit oficial";
 "DISCORD" = "Discord oficial";
@@ -63,20 +63,20 @@
 "COORDSLIST" = "Lista de coordenadas";
 "HIDEMENU" = "Esconder menu";
 "HIDEMENUDESC" = "Para exibir o menu novamente clique três vezes na tela.";
-"X8" = "Mover-se nessa velocidade por mais de alguns segundos fará com que todos Pokémon fujam e desabilitará Pokéstops. Isso é conhecido como soft ban. Se isso acontecer, você deve esperar alguns minutos antes de voltar a jogar. ";
-"PATROLENABLED" = "Habilitar Patrula";
+"X8" = "Mover-se nessa velocidade por mais de alguns segundos fará com que todos Pokémon fujam e desabilitará Pokéstops. Isso é conhecido como softban. Se isso acontecer, você deve esperar alguns minutos antes de voltar a jogar. ";
+"PATROLENABLED" = "Habilitar Patrulha";
 "ENTERCOORDS" = "Insira coordenadas";
 "RETURNHOME" = "Retornar para localização atual";
 "WALKHERE" = "Andar até aqui";
 "TELEPORTHERE" = "Teleportar até aqui";
 "TELEPORT" = "Teleportar";
 "PATROLDESC" = "Você está patrulhando. Você precisa parar de patrulhar antes de usar o Snipe";
-"EXECUTESNIPE" = "Vai snipe";
+"EXECUTESNIPE" = "Ir";
 "COORDINATES" = "Coordenadas";
 "LOCALIZATION" = "Localização";
 "LANGUAGE" = "Língua";
 "ENABLEGET" = "Habilitar Radar 2.0 Map Fetch";
-"ENABLEGETDESC" = "Habilita o mapa do radar 2.0 a adquirir dados do servidor central para mostrar Pokémon,Ginásios e Pokestops adicionais ";
+"ENABLEGETDESC" = "Habilita o mapa do radar 2.0 a adquirir dados do servidor central para mostrar Pokémon, Ginásios e Pokestops adicionais ";
 "JOYSTICKDELTA" = "Controle Y Delta +/- (px)";
 "JOYSTICKDELTAX" = "Controle X Delta +/- (px)";
 "SAVE" = "Salvar";
@@ -85,35 +85,35 @@
 "RESUME" = "Continuar";
 "EDIT" = "Editar arquivo de Rota";
 "STOP" = "Pare";
-"ACTIVATE" = "Ativar a Versão do Doador";
-"PATREON" = "Activate with Patreon";
-"DISCORDA" = "Activate with Discord";
-"DEEPLINK" = "Links profundos";
+"ACTIVATE" = "Ativar a Versão de Doador";
+"PATREON" = "Ativar com Patreon";
+"DISCORDA" = "Ativar com Discord";
+"DEEPLINK" = "Links";
 "GPX" = "Roteamento GPX";
-"NODONOR" = "Esse recurso requer acesso ao doador. Por favor, ative sua versão nas configurações.";
+"NODONOR" = "Esse recurso requer acesso de doador. Por favor, ative sua versão nas configurações.";
 "LOGOUT" = "Sair";
-"ACTIVATED" = "Versão do doador ativada";
-"NOTADONOR" = "Atualmente, você não é um doador. Por favor, apoiem-nos doando agora usando o link em Configurações. Se você doou, pode levar algum tempo para ativar o novo papel na sua conta Discordânea. Se você ainda está tendo problemas, visite-nos em Reddit ou Discord.";
+"ACTIVATED" = "Versão de doador ativada!";
+"NOTADONOR" = "Atualmente, você não é um doador. Por favor, apoie-nos doando agora usando o link em Configurações. Se você doou, pode levar algum tempo para ativar em sua conta Discord. Se você ainda está tendo problemas, visite-nos em Reddit ou Discord.";
 "STATUS" = "Status";
 "AUTOHOME" = "Lançamento melhorado";
-"CUSTOMSPEED" = "Custom Speed (0-16)";
-"HIDEGYM" = "Hide Gym Mode Button";
-"SPECIALLIST" = "Special Pokémon List";
-"COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Hide Cooldown Timer Button";
-"HIDETAPTOWALK" = "Hide Tap to Walk Button";
-"HIDEGPX" = "Hide GPX Button";
-"HIDEPREVIOUSLOC" = "Hide Previous Button";
-"HIDEIV" = "Hide IV Button";
-"PARTNERCOORDS" = "Partners";
-"PARTNERPARAMS" = "Options";
-"PARTNERCOORDSDESC" = "For access to these premium coords, you may require a subscription. Please contact the provider directly.";
-"OVERRIDE"= "Startup/Forever";
-"FORCEUPDATES" = "Force Location Updates";
+"CUSTOMSPEED" = "Velocidade personalizada (0-16)";
+"HIDEGYM" = "Esconder botão Modo Ginásio";
+"SPECIALLIST" = "Lista Pokémon Especial";
+"COOLDOWN" = "Cronômetro de Cooldown";
+"HIDECOOLDOWN" = "Esconder botão Cronômetro de Cooldown";
+"HIDETAPTOWALK" = "Esconder botão Clique para Andar";
+"HIDEGPX" = "Esconder botão Rota GPX";
+"HIDEPREVIOUSLOC" = "Esconder botão Localização Prévia";
+"HIDEIV" = "Esconder botão IV";
+"PARTNERCOORDS" = "Parceiros";
+"PARTNERPARAMS" = "Opções";
+"PARTNERCOORDSDESC" = "Para acessar essas coordenadas você talvez precise de uma doação. Entre em contato com o provedor diretamente.";
+"OVERRIDE"= "Início/Sempre";
+"FORCEUPDATES" = "Forçar Atualização de Localização";
 "SPOOFING" = "Spoofing";
-"KEY" = "Key";
-"LOOPGPX" = "Loop GPX Route";
-"PREVIOUSLOCATION" = "Previous Location";
-"GENERATEGPX" = "Generate GPX";
-"SECONDARY" = "Secondary Device";
-"SECONDARYMSG" = "Are you activating a second device? (Tier 2 License Required)";
+"KEY" = "Licença";
+"LOOPGPX" = "Rota GPX Contínua";
+"PREVIOUSLOCATION" = "Localização Anterior";
+"GENERATEGPX" = "Gerar GPX";
+"SECONDARY" = "Aparelho Secundário";
+"SECONDARYMSG" = "Vocês está ativando um segundo aparelho? (Licença Tier 2 Requerida)";
