--- a/it.strings
+++ b/it.strings
@@ -1,8 +1,8 @@
-﻿"WELCOME" = "Benvenuto in PokeGo++ 2.0!";
-"MSG" = "Speriamo che ti divertirai ad utilizzare questo tweak!\n\nPer aggiornamenti e maggiori informazioni su come usare questo tweak, abbiamo pubblicato delle guide su Discord e Reddit.\nAssicurati di scaricare il tweak direttamente da noi!\n\nSe ti piace questo tweak, considera una donazione per permetterci di migliorarlo sempre di piÃ¹ e tenerlo sempre aggiornato!";
+"WELCOME" = "Benvenuto in PokeGo++ 2.0!";
+"MSG" = "Speriamo che ti divertirai ad utilizzare questo tweak!\n\nPer aggiornamenti e maggiori informazioni su come usare questo tweak, abbiamo pubblicato delle guide su Discord e Reddit.\nAssicurati di scaricare il tweak direttamente da noi!\n\nSe ti piace questo tweak, considera una donazione per permetterci di migliorarlo sempre di più e tenerlo sempre aggiornato!";
 "WALKING" = "Cammina";
 "RUNNING" = "Corri";
-"BIKING" = "ModalitÃ  bici";
+"BIKING" = "Modalità bici";
 "DRIVING" = "Guida";
 "HATCHING" = "Schiudi uova";
 "DONT_SAVE" = "Non salvare";
@@ -21,22 +21,22 @@
 "DISMISSWALK" = "Nascondi la mappa dopo aver toccato \"Cammina qui\"";
 "ENABLETELE" = "Abilita il teletrasporto";
 "WARNING" = "Attenzione!";
-"TELEDESC" = "Utilizzare il teletrasporto potrebbe portare alla chiusura del proprio account da parte di Niantic. Non ci riteniamo responsabili se lâ€™utilizzo del teletrasporto possa portare ad un ban! Ti abbiamo avvertito.";
+"TELEDESC" = "Utilizzare il teletrasporto potrebbe portare alla chiusura del proprio account da parte di Niantic. Non ci riteniamo responsabili se l’utilizzo del teletrasporto possa portare ad un ban! Ti abbiamo avvertito.";
 "OK" = "OK";
 "CANCEL" = "Cancella";
 "CLOSE" = "Chiudi";
 "DISMISSTELE" = "Nascondi la mappa dopo aver toccato \"Teletrasporta qui\"";
 "DISABLEIV" = "Disabilita la notifica IV";
 "IVLENGTH" = "Tempo di notifica IV (ms)";
-"IVLENGTHDESC" = "Inserisci il tempo (in millisecondi) per il quale le notifiche IV e le mosse dovranno apparire sullo schermo allâ€™incontro con un pokÃ©mon";
+"IVLENGTHDESC" = "Inserisci il tempo (in millisecondi) per il quale le notifiche IV e le mosse dovranno apparire sullo schermo all’incontro con un pokémon";
 "FAKELOCATION" = "Falsa posizione";
 "SAVEFAKE" = "Tempo di salvataggio della posizione";
-"SAVEFAKEDESC" = "Per quanto tempo deve essere memorizzata la posizione falsa dopo la chiusura dellâ€™applicazione.";
+"SAVEFAKEDESC" = "Per quanto tempo deve essere memorizzata la posizione falsa dopo la chiusura dell’applicazione.";
 "SHOWCOORDS" = "Mostra il pulsante delle coordinate sulla mappa";
-"SHOWCOORDSDESC" = "Abilita il pulsante delle coordinate sulla mappa. Se toccato, apparirÃ  un popup con le coordinare attuali dellâ€™avatar. Le coordinate possono essere copiate.";
+"SHOWCOORDSDESC" = "Abilita il pulsante delle coordinate sulla mappa. Se toccato, apparirà un popup con le coordinare attuali dell’avatar. Le coordinate possono essere copiate.";
 "URL" = "URL:";
 "COORDSSERVER" = "Server delle coordinate";
-"COORDSSERVERDESC" = "Opzionale: Inserisci lâ€™URL completo delle coordinate o il server delle coordinate. PuÃ² essere un indirizzo privato o pubblico. Se popolato, potrai recuperare la lista delle coordinate dal file \"coords.txt\" disponibile allâ€™URL fornito. Tali coordinate saranno popolate nella lista coordinate quando si utilizzerÃ  la modalitÃ  Snipe.";
+"COORDSSERVERDESC" = "Opzionale: Inserisci l’URL completo delle coordinate o il server delle coordinate. Può essere un indirizzo privato o pubblico. Se popolato, potrai recuperare la lista delle coordinate dal file \"coords.txt\" disponibile all’URL fornito. Tali coordinate saranno popolate nella lista coordinate quando si utilizzerà la modalità Snipe.";
 "CONTACTUS" = "Contattaci";
 "REDDIT" = "Reddit ufficiale";
 "DISCORD" = "Discord ufficiale";
@@ -51,17 +51,17 @@
 "SETTINGS" = "Impostazioni";
 "POKESTOP" = "Pokestops";
 "GYM" = "Palestre";
-"POKEMON" = "PokÃ©mon";
+"POKEMON" = "Pokémon";
 "LICENSE" = "Licenza";
 "CONTINUE" = "Continua";
 "COORDSLIST" = "Lista coordinate";
 "HIDEMENU" = "Nascondi menu";
 "HIDEMENUDESC" = "Per mostrare di nuovo il menu, fai un triplo tocco sullo schermo";
-"X8" = "Muoversi a questa velocitÃ  per diversi secondi potrebbe causare la scomparsa di tutti i pokÃ©mon dallo schermo e la disabilitazione dei pokestop. Questo Ã¨ conosciuto come soft ban. Se ciÃ² accade dovrai aspettare qualche minuto prima di ricominciare a giocare.";
-"PATROLENABLED" = "ModalitÃ  \"Pattugliamento\" abilitata";
+"X8" = "Muoversi a questa velocità per diversi secondi potrebbe causare la scomparsa di tutti i pokémon dallo schermo e la disabilitazione dei pokestop. Questo è conosciuto come soft ban. Se ciò accade dovrai aspettare qualche minuto prima di ricominciare a giocare.";
+"PATROLENABLED" = "Modalità \"Pattugliamento\" abilitata";
 "ENTERCOORDS" = "Inserisci coordinate";
 "RETURNHOME" = "Torna a casa";
-"PATROLDESC" = "Attualmente sei in modalitÃ  \"Pattugliamento\". Devi disattivare la modalitÃ  \"Pattugliamento\" prima di effettuare lo \"Sniping\"";
+"PATROLDESC" = "Attualmente sei in modalità \"Pattugliamento\". Devi disattivare la modalità \"Pattugliamento\" prima di effettuare lo \"Sniping\"";
 "WALKHERE" = "Vai qui";
 "TELEPORTHERE" = "Teletrasporta qui";
 "TELEPORT" = "Teletrasporto";
@@ -70,7 +70,7 @@
 "LOCALIZATION" = "Localizzazione";
 "LANGUAGE" = "Lingua";
 "ENABLEGET" = "Abilita la condivisione dei dati della mappa Radar 2.0";
-"ENABLEGETDESC" = "Autorizza la mappa Radar 2.0 a inviare i dati al server centrale. Questo renderÃ  possibile visualizzare piÃ¹ pokÃ©mon, palestre e pokestops";
+"ENABLEGETDESC" = "Autorizza la mappa Radar 2.0 a inviare i dati al server centrale. Questo renderà possibile visualizzare più pokémon, palestre e pokestops";
 "JOYSTICKDELTA" = "Joystick Y Delta +/- (px)";
 "JOYSTICKDELTAX" = "Joystick X Delta +/- (px)";
 "SAVE" = "Salva";
@@ -87,12 +87,12 @@
 "NODONOR" = "Questa opzione richiede l'accesso come donatore. Per favore attiva lo stato donatore nelle impostazioni";
 "LOGOUT" = "Esci";
 "ACTIVATED" = "Stato donatore attivato";
-"NOTADONOR" = "Al momento non sei un donatore. Ti preghiamo di sostenerci donando ora, utilizzando il link che si trova nelle impostazioni. Se hai giÃ  donato, potrebbe richiedere del tempo prima che il tuo account Discord venga aggiunto al nuovo ruolo. Se continui ad avere problemi, vieni a trovarci su Reddit e/o Discord.";
+"NOTADONOR" = "Al momento non sei un donatore. Ti preghiamo di sostenerci donando ora, utilizzando il link che si trova nelle impostazioni. Se hai già donato, potrebbe richiedere del tempo prima che il tuo account Discord venga aggiunto al nuovo ruolo. Se continui ad avere problemi, vieni a trovarci su Reddit e/o Discord.";
 "STATUS" = "Stato";
 "AUTOHOME" = "Tiro migliorato";
-"CUSTOMSPEED" = "VelocitÃ  personalizzata (0-16)";
-"HIDEGYM" = "Nascondi il pulsante \"ModalitÃ  palestra\"";
-"SPECIALLIST" = "Lista PokÃ©mon speciali";
+"CUSTOMSPEED" = "Velocità personalizzata (0-16)";
+"HIDEGYM" = "Nascondi il pulsante \"Modalità palestra\"";
+"SPECIALLIST" = "Lista Pokémon speciali";
 "COOLDOWN" = "Cronometro per la ricarica";
 "HIDECOOLDOWN" = "Nascondi il pulsante \"Cronometro per la ricarica\"";
 "HIDETAPTOWALK" = "Nascondi il pulsante \"Tocca per camminare\"";
