[UPDATE] finish Dutch translations

--- a/nl.strings
+++ b/nl.strings
@@ -80,8 +80,8 @@
 "EDIT" = "Bewerk Route Bestand";
 "STOP" = "Stop";
 "ACTIVATE" = "Activeer Donor Versie";
-"PATREON" = "Activate with Patreon";
-"DISCORDA" = "Activate with Discord";
+"PATREON" = "Activeer met Patreon";
+"DISCORDA" = "Activeer met Discord";
 "DEEPLINK" = "Deep Linking";
 "GPX" = "GPX Routing";
 "NODONOR" = "Deze functie vereist donor toegang. Activeer alstublieft uw versie in instellingen.";
@@ -91,23 +91,23 @@
 "STATUS" = "staat";
 "AUTOHOME" = "Verbeterde Gooi";
 "CUSTOMSPEED" = "Snelheid Keuze (0-16)";
-"HIDEGYM" = "Hide Gym Mode Button";
-"SPECIALLIST" = "Special Pokémon List";
+"HIDEGYM" = "Verberg Gym Mode knop";
+"SPECIALLIST" = "Speciale Pokémon List";
 "COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Hide Cooldown Timer Button";
-"HIDETAPTOWALK" = "Hide Tap to Walk Button";
-"HIDEGPX" = "Hide GPX Button";
-"HIDEPREVIOUSLOC" = "Hide Previous Button";
-"HIDEIV" = "Hide IV Button";
+"HIDECOOLDOWN" = "Verberg Cooldown Timer Knop";
+"HIDETAPTOWALK" = "Verberg Tap to Walk Knop";
+"HIDEGPX" = "Verberg GPX Knop";
+"HIDEPREVIOUSLOC" = "Verberg Previous Knop";
+"HIDEIV" = "Verberg IV Knop";
 "PARTNERCOORDS" = "Partners";
-"PARTNERPARAMS" = "Options";
-"PARTNERCOORDSDESC" = "For access to these premium coords, you may require a subscription. Please contact the provider directly.";
-"OVERRIDE"= "Startup/Forever";
-"FORCEUPDATES" = "Force Location Updates";
+"PARTNERPARAMS" = "Opties";
+"PARTNERCOORDSDESC" = "Voor toegang tot deze premium coords heb je misschien een subscription nodig. Gelieve de provider rechtstreeks te contacteren.";
+"OVERRIDE"= "Opstarten/Voor altijd";
+"FORCEUPDATES" = "Forceer Locatie Updates";
 "SPOOFING" = "Spoofing";
 "KEY" = "Key";
 "LOOPGPX" = "Loop GPX Route";
-"PREVIOUSLOCATION" = "Previous Location";
-"GENERATEGPX" = "Generate GPX";
-"SECONDARY" = "Secondary Device";
-"SECONDARYMSG" = "Are you activating a second device? (Tier 2 License Required)";
+"PREVIOUSLOCATION" = "Vorige Locatie";
+"GENERATEGPX" = "Genereer GPX";
+"SECONDARY" = "Tweede toestel";
+"SECONDARYMSG" = "Bent u een tweede toestel aan het activeren? (Tier 2 Licentie Nodig)";
