--- a/es.strings
+++ b/es.strings
@@ -5,7 +5,7 @@
 "FILL_OUT_ALL_INFO" = "¡Asegúrate de completar toda la información!";
 "PAYMENT_THANK_YOU_TITLE" = "¡Gracias!";
 "PAYMENT_CONFIRMATION" = "Has eliminado los anuncios de YT ++ para siempre. ¡Gracias por tu apoyo, significa mucho!";
-"PAYMENT_OK" = "Okay!";
+"PAYMENT_OK" = "¡Okay!";
 "WALKING" = "Caminando";
 "RUNNING" = "Corriendo";
 "BIKING" = "Bicicleta";
@@ -71,7 +71,7 @@
 "WALKHERE" = "Caminar aquí";
 "TELEPORTHERE" = "Teletransportarse aquí";
 "TELEPORT" = "Teletransportarse";
-"EXECUTESNIPE" = "Ejecutar Snipe?";
+"EXECUTESNIPE" = "¿Ejecutar Snipe?";
 "COORDINATES" = "Coordenadas";
 "LOCALIZATION" = "Localización";
 "LANGUAGE" = "Idioma";
@@ -117,21 +117,21 @@
 "GENERATEGPX" = "Generar GPX";
 "SECONDARY" = "Segundo dispositivo";
 "SECONDARYMSG" = "¿Estás activando un segundo dispositivo? (Licencia de Nivel 2 requerida)";
-"HELP" = "HELP";
-"NEEDHELP" = "Need Help?";
-"ASIAFIX" = "Asia Patreon Fix";
-"HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Enable Worker Mode";
-"SENDPROTOS" = "Send Raw Protos";
-"FREQUENCY" = "Frequency (Seconds)";
-"ENABLEFETCH" = "Enable Location Fetch";
-"COORDSGEN" = "Coords Generator";
-"POKEMON" = "Pokemon";
-"RAIDS" = "Raids";
-"QUESTS" = "Quests";
-"YES" = "Yes";
+"HELP" = "Ayuda";
+"NEEDHELP" = "¿Necesitas ayuda?";
+"ASIAFIX" = "Ajustar Asia Patreon";
+"HOSTMAP" = "Aloja tu propio mapa";
+"ENABLEWORKER" = "Habilitar Modo Trabajador";
+"SENDPROTOS" = "Enviar fotos RAW";
+"FREQUENCY" = "Frecuencia (segundos)";
+"ENABLEFETCH" = "Habilitar recuperación de ubicación";
+"COORDSGEN" = "Generador de coordenadas";
+"POKEMON" = "Pokémon";
+"RAIDS" = "Incursiones";
+"QUESTS" = "Misiones";
+"YES" = "Sí";
 "NO" = "No";
-"AUTOGENERATE" = "Auto Generate";
-"DRAWGPX" = "Draw GPX Route";
-"STARTUPFOREVER" = "Startup/Forever";
-"COOLDOWN" = "Cooldown Timer";
+"AUTOGENERATE" = "Auto generar";
+"DRAWGPX" = "Trazar ruta GPX";
+"STARTUPFOREVER" = "Inicio/Siempre";
+"COOLDOWN" = "Tiempo de espera";
