--- a/fr.strings
+++ b/fr.strings
@@ -1,18 +1,18 @@
-﻿"HEY_THERE_ALERT" = "Hey There!";
-"NO_THANKS_ALERT" = "No Thanks";
-"TWEET_TO_REMOVE_ADS" = "Tweeting will remove YT ++ ads for 1.5 weeks. You can tweet for FREE every week. Your support is awesome!";
-"MISSING_INFORMATION" = "Missing Information";
-"FILL_OUT_ALL_INFO" = "Make sure you fill out all of the information!";
-"PAYMENT_THANK_YOU_TITLE" = "Thanks!";
-"PAYMENT_CONFIRMATION" = "You have removed ads for YT ++ forvever. Thanks for your support it means a ton!";
+﻿"HEY_THERE_ALERT" = "Salut!";
+"NO_THANKS_ALERT" = "Non merci";
+"TWEET_TO_REMOVE_ADS" = "Tweeeter vous permet de supprimer les publicités de YT ++ pour 1.5 semaines. Vous pouvez tweeter gratuitement toute les semaines. Votre soutien est génial !";
+"MISSING_INFORMATION" = "Information manquante";
+"FILL_OUT_ALL_INFO" = "Assurez-vous de remplir tout les champs!";
+"PAYMENT_THANK_YOU_TITLE" = "Merci!";
+"PAYMENT_CONFIRMATION" = "Vous avez supprimé pour toujours les publicités pour YT ++. Merci pour votre support, ça nous touche beaucoup!";
 "PAYMENT_OK" = "Okay!";
 "WALKING" = "Marcher";
 "RUNNING" = "Courir";
 "BIKING" = "Faire du vélo";
 "DRIVING" = "Conduire";
-"HATCHING" = "éclore";
+"HATCHING" = "Éclore";
 "DONT_SAVE" = "Ne pas sauvegarder";
-"MINUTE" = "A Minute";
+"MINUTE" = "Une Minute";
 "5MINUTE" = "5 Minutes";
 "10MINUTE" = "10 Minutes";
 "20MINUTE" = "20 Minutes";
@@ -24,25 +24,25 @@
 "SUPPORTUSDESC" = "Aidez-nous à garder PokeGo++ 2.0 en vie ! Encouragez nos équipes et développeurs en faisant un don.";
 "USAGE" = "Options d'utilisation";
 "SHOWJOY" = "Montrer Joystick";
-"DISMISSWALK" = "Fermer la Map sur Marcher ici";
-"ENABLETELE" = "Permettre la téléportation";
+"DISMISSWALK" = "Fermer la Map quand “Marcher ici”";
+"ENABLETELE" = "Activer la téléportation";
 "WARNING" = "Attention!";
 "TELEDESC" = "Se téléporter peut conduire à la fermeture de votre compte par Niantic. Nous ne sommes en aucun cas tenus responsables de votre bannissement du jeu quelqu'en soit le motif ! Vous êtes prévenus.";
 "OK" = "Ok";
 "CANCEL" = "Quitter";
 "CLOSE" = "Fermer";
-"DISMISSTELE" = "Fermer la Map sur Téléportez ici";
+"DISMISSTELE" = "Fermer la Map quand “Téléporter ici”";
 "DISABLEIV" = "Désactiver la notification IV";
-"IVLENGTH" = "IV Notification Length (ms)";
-"IVLENGTHDESC" = "Enter milliseconds for IV and moveset notification display length when encountering pokemon. ";
-"FAKELOCATION" = "Fake Location ";
-"SAVEFAKE" = "Time to Save Location ";
-"SAVEFAKEDESC" = "How long after app close should the location be saved.";
+"IVLENGTH" = "Longueur de la notification d'IV (en ms)";
+"IVLENGTHDESC" = "Entrez en milliseconde le temps de la notification d'IV et du Moveset lors de la rencontre avec un pokemon.";
+"FAKELOCATION" = "Fausse localisation";
+"SAVEFAKE" = "Temps pour sauvegarder la fausse localisation ";
+"SAVEFAKEDESC" = "Combien de temps après la fermeture de l'application le lieu doit-il être enregistré?";
 "SHOWCOORDS" = "Montrer le bouton des coordonnées sur la Map";
 "SHOWCOORDSDESC" = "Activer le bouton de coordonnées sur la Map. Si vous cliquez, une fenêtre popup va apparaitre et afficher les coordonnées de l'emplacement de votre punaise.";
 "URL" = "URL";
-"COORDSSERVER" = "Coordinates Server Feed";
-"COORDSSERVERDESC" = "Optionnel: Entrez l'url complète d'un serveur de coordonnées. Cela peut être une adresse privée ou publique. Pré-rempli, il récupérera la liste des coordonnées stockées dans le fichier \"coords.txt\" accessible à l'url fourni. Ces coordonnées seront placées dans la liste des coordonnées quand vous utiliserez la fonctionnalité pour sniper.";
+"COORDSSERVER" = "Flux du serveur de coordonnées";
+"COORDSSERVERDESC" = "Optionnel: Entrez l'url complète d'un serveur de coordonnées. Cela peut être une adresse privée ou publique. Si c'est peuplé, il récupérera la liste des coordonnées stockées dans le fichier \"coords.txt\" accessible à l'url fourni. Ces coordonnées seront placées dans la liste des coordonnées quand vous utiliserez la fonctionnalité pour sniper.";
 "CONTACTUS" = "Nous contacter";
 "REDDIT" = "Reddit officiel";
 "DISCORD" = "Discord officiel";
@@ -52,7 +52,7 @@
 "TOSDESC" = "Merci d'avoir accepté les conditions d'utilisation. N'hésitez pas de les consulter à tout moment. Bonne chasse !!";
 "CREDITS" = "Crédits";
 "NIANTIC" = "Niantic Labs";
-"NIANTICDESC" = "For missing key features including location spoofing, controls, walk-to map, teleporting, IV calculation and more!!!\n\nPokeGo++ 2.0 is based on PokeGoAnywhere / PokeGo++ by miniroo321.";
+"NIANTICDESC" = "Pour des fonctionnalités clés manquantes tel que la changement de lieu, les contrôles, 'marcher vers' sur la map, la téléportation, la calculation d'IV et bien plus!!!\n\nPokeGo++ 2.0 est basé sur PokeGoAnywhere / PokeGo++ par miniroo321.";
 "RADAR" = "Radar";
 "SETTINGS" = "Paramètres";
 "POKESTOP" ="Pokestops";
@@ -63,15 +63,15 @@
 "COORDSLIST" = "Liste des coordonnées";
 "HIDEMENU" = "Cacher le menu";
 "HIDEMENUDESC" = "Pour montrer le menu à nouveau, tapez trois fois sur l'écran";
-"X8" = "Se déplacer constamment à cette vitesse peut causer la fuite de tous les pokémon ainsi que l'incapacité à récupérer le contenu des Pokéstops. Il s'agit alors d'un soft ban. Si cela vous arrive, attendez quelques minutes avant de jouer.";
+"X8" = "Se déplacer constamment à cette vitesse peut causer la fuite de tous les pokémon et provoquer l'incapacité à récupérer le contenu des Pokéstops. Il s'agit alors d'un soft ban. Si cela vous arrive, attendez quelques minutes avant de jouer.";
 "PATROLENABLED" = "Patrouille activée";
 "ENTERCOORDS"= "Entrez les coordonnées";
 "RETURNHOME" = "Rentrer chez soi";
 "WALKHERE" = "Marcher ici";
-"TELEPORTHERE" = "Téléportez ici";
-"TELEPORT" = "Téléportez";
+"TELEPORTHERE" = "Se Téléporter ici";
+"TELEPORT" = "Téléporter";
 "PATROLDESC" = "Vous devez arrêtez votre patrouille avant de sniper.";
-"EXECUTESNIPE" = "Allez snipe?";
+"EXECUTESNIPE" = "Allez sniper?";
 "COORDINATES" = "Coordonnées";
 "LOCALIZATION" = "Localisation";
 "LANGUAGE" = "La langue";
@@ -80,61 +80,61 @@
 "JOYSTICKDELTA" = "Joystick Y Delta +/- (px)";
 "JOYSTICKDELTAX" = "Joystick X Delta +/- (px)";
 "SAVE" = "Sauvegarder";
-"ROUTESMENU" = "Menu itinéraires";
+"ROUTESMENU" = "Menu des itinéraires";
 "START" = "Démarrer";
 "RESUME" = "Reprendre";
 "EDIT" = "Editer les itinéraires";
 "STOP" = "Arrêtez";
-"ACTIVATE" = "Activer la version du donateur";
-"PATREON" = "Activate with Patreon";
-"DISCORDA" = "Activate with Discord";
+"ACTIVATE" = "Activer la version donateur";
+"PATREON" = "Activer avec Patreon";
+"DISCORDA" = "Activer avec Discord";
 "DEEPLINK" = "Lien profond";
 "GPX" = "GPX Routing";
 "NODONOR" = "Cette fonctionnalité nécessite l'accès des donateurs. Activez votre version dans les paramètres.";
-"LOGOUT" = "Connectez - Out";
-"ACTIVATED" = "Version du donateur activée";
-"NOTADONOR" = "Vous n'êtes actuellement pas un donateur. Appelez-nous en faisant un don maintenant en utilisant le lien sous Paramètres. Si vous avez fait un don, cela peut prendre du temps pour activer le nouveau rôle sur votre compte Discord. Si vous rencontrez toujours des problèmes, visitez-nous sur Reddit ou Discord.";
+"LOGOUT" = "Se déconnecter";
+"ACTIVATED" = "Version donateur activée";
+"NOTADONOR" = "Vous n'êtes actuellement pas un donateur. Supportez-nous en faisant un don en utilisant le lien sous les Paramètres. Si vous avez fait un don, cela peut prendre du temps pour activer le nouveau rôle sur votre compte Discord. Si vous rencontrez toujours des problèmes, venez nous voir sur Reddit ou Discord.";
 "STATUS" = "Statut";
 "AUTOHOME" = "Lancement amélioré";
-"CUSTOMSPEED" = "Custom Speed (0-16)";
-"HIDEGYM" = "Hide Gym Mode Button";
-"SPECIALLIST" = "Special Pokémon List";
-"COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Hide Cooldown Timer Button";
-"HIDETAPTOWALK" = "Hide Tap to Walk Button";
-"HIDEGPX" = "Hide GPX Button";
-"HIDEPREVIOUSLOC" = "Hide Previous Button";
-"HIDEIV" = "Hide IV Button";
-"PARTNERCOORDS" = "Partners";
+"CUSTOMSPEED" = "Vitesse personnalisé (0-16)";
+"HIDEGYM" = "Cacher le bouton du mode Arène";
+"SPECIALLIST" = "Liste spécial de Pokémon";
+"COOLDOWN" = "Temps de recharge";
+"HIDECOOLDOWN" = "Cacher le bouton du Temps de recharge";
+"HIDETAPTOWALK" = "Cacher le bouton 'Marcher ici'";
+"HIDEGPX" = "Cacher le bouton GPX";
+"HIDEPREVIOUSLOC" = "Cacher les bouton précédent";
+"HIDEIV" = "Cacher le bouton d'IV";
+"PARTNERCOORDS" = "Les partenaires";
 "PARTNERPARAMS" = "Options";
-"PARTNERCOORDSDESC" = "For access to these premium coords, you may require a subscription. Please contact the provider directly.";
-"OVERRIDE"= "Startup/Forever";
-"FORCEUPDATES" = "Force Location Updates";
+"PARTNERCOORDSDESC" = "Pour accéder à ces coordonnées premium, vous devez avoir abonnement. Contactez le fournisseur directement.";
+"OVERRIDE"= "Au démarrage/Pour toujours";
+"FORCEUPDATES" = "Forcer les mises à jour de l'emplacement";
 "SPOOFING" = "Spoofing";
-"KEY" = "Key";
-"LOOPGPX" = "Loop GPX Route";
-"PREVIOUSLOCATION" = "Previous Location";
-"GENERATEGPX" = "Generate GPX";
-"SECONDARY" = "Secondary Device";
-"SECONDARYMSG" = "Are you activating a second device? (Tier 2 License Required)";
-"HELP" = "HELP";
-"NEEDHELP" = "Need Help?";
-"ASIAFIX" = "Asia Patreon Fix";
-"HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Enable Worker Mode";
+"KEY" = "Clé";
+"LOOPGPX" = "Faire en boucle la route GPX";
+"PREVIOUSLOCATION" = "Lieu précédent";
+"GENERATEGPX" = "Générer GPX";
+"SECONDARY" = "Appareil secondaire";
+"SECONDARYMSG" = "Activez-vous un deuxième appareil? (licence de niveau 2 requise)";
+"HELP" = "AIDE";
+"NEEDHELP" = "Besoin d'aide?";
+"ASIAFIX" = "Fix de l'Asie Patreon";
+"HOSTMAP" = "Hébergez votre propre carte";
+"ENABLEWORKER" = "Activer le mode travailleur";
 "SENDPROTOS" = "Send Raw Protos";
-"FREQUENCY" = "Frequency (Seconds)";
-"ENABLEFETCH" = "Enable Location Fetch";
-"COORDSGEN" = "Coords Generator";
+"FREQUENCY" = "Fréquence (Secondes)";
+"ENABLEFETCH" = "Activer la récupération d'emplacement";
+"COORDSGEN" = "Générateur de coordonnées";
 "POKEMON" = "Pokemon";
 "RAIDS" = "Raids";
-"QUESTS" = "Quests";
-"YES" = "Yes";
-"NO" = "No";
-"AUTOGENERATE" = "Auto Generate";
-"DRAWGPX" = "Draw GPX Route";
-"STARTUPFOREVER" = "Startup/Forever";
-"COOLDOWN" = "Cooldown Timer";
-"FORCEDCOORDS" = "Forced Coords List";
-"AUTORESUME" = "Auto Resume GPX";
+"QUESTS" = "Quêtes";
+"YES" = "Oui";
+"NO" = "Non";
+"AUTOGENERATE" = "Génération automatique";
+"DRAWGPX" = "Dessiner un route GPX";
+"STARTUPFOREVER" = "Au démarrage/Pour toujours";
+"COOLDOWN" = "Temps de recharge";
+"FORCEDCOORDS" = "Liste de coordonnées forcée";
+"AUTORESUME" = "Reprise automatique GPX";
 "NESTS" = "Nests";
