--- a/pt-BR.strings
+++ b/pt-BR.strings
@@ -1,4 +1,4 @@
-﻿"HEY_THERE_ALERT" = "Olá!";
+"HEY_THERE_ALERT" = "Olá!";
 "NO_THANKS_ALERT" = "Não, obrigado.";
 "TWEET_TO_REMOVE_ADS" = "Tweetar irá remover propagandas em seu YT++ por 1 semana e meia. Você pode tweetar de GRAÇA toda semana. Obrigado pelo suporte!";
 "MISSING_INFORMATION" = "Faltando Informações!";
@@ -42,7 +42,7 @@
 "SHOWCOORDSDESC" = "Habilita botão de coordenadas no mapa. Se clicado, uma janela irá abrir exibindo as coordenadas da sua localização atual. Coordenadas podem ser copiadas. ";
 "URL" = "URL:";
 "COORDSSERVER" = "Lista de coordenadas do servidor";
-"COORDSSERVERDESC" = "Opcional: Insira a URL complete de um servidor de coordenadas. Pode ser um endereço público ou privado. Se preenchido, irá recuperar a lista de coordenadas armazenadas em um arquivo \”coords.txt\” acessível na URL introduzida. Essas coordenadas serão preenchidas na lista de coordenadas quando usar o recurso Snipe.";
+"COORDSSERVERDESC" = "Opcional: Insira a URL completa de um servidor de coordenadas. Pode ser um endereço público ou privado. Se preenchido, irá recuperar a lista de coordenadas armazenadas em um arquivo \”coords.txt\” acessível na URL introduzida. Essas coordenadas serão preenchidas na lista de coordenadas quando usar o recurso Snipe.";
 "CONTACTUS" = "Contate-nos";
 "REDDIT" = "Reddit oficial";
 "DISCORD" = "Discord oficial";
@@ -117,24 +117,24 @@
 "GENERATEGPX" = "Gerar GPX";
 "SECONDARY" = "Aparelho Secundário";
 "SECONDARYMSG" = "Vocês está ativando um segundo aparelho? (Licença Tier 2 Requerida)";
-"HELP" = "HELP";
-"NEEDHELP" = "Need Help?";
+"HELP" = "AJUDA";
+"NEEDHELP" = "Precisa de Ajuda?";
 "ASIAFIX" = "Asia Patreon Fix";
-"HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Enable Worker Mode";
-"SENDPROTOS" = "Send Raw Protos";
-"FREQUENCY" = "Frequency (Seconds)";
-"ENABLEFETCH" = "Enable Location Fetch";
-"COORDSGEN" = "Coords Generator";
-"POKEMON" = "Pokemon";
-"RAIDS" = "Raids";
-"QUESTS" = "Quests";
-"YES" = "Yes";
-"NO" = "No";
-"AUTOGENERATE" = "Auto Generate";
-"DRAWGPX" = "Draw GPX Route";
-"STARTUPFOREVER" = "Startup/Forever";
+"HOSTMAP" = "Hospede seu próprio Mapa";
+"ENABLEWORKER" = "Ativar modo Mapeamento";
+"SENDPROTOS" = "Enviar Raw Protos";
+"FREQUENCY" = "Frequência (Segundos)";
+"ENABLEFETCH" = "Ativar Obtenção de Localização";
+"COORDSGEN" = "Gerador de Coordenadas";
+"POKEMON" = "Pokémon";
+"RAIDS" = "Reides";
+"QUESTS" = "Pesquisas de Campo";
+"YES" = "Sim";
+"NO" = "Não";
+"AUTOGENERATE" = "Gerar Automaticamente";
+"DRAWGPX" = "Desenhar Rota GPX ";
+"STARTUPFOREVER" = "Ao Iniciar/Sempre";
 "COOLDOWN" = "Cooldown Timer";
-"FORCEDCOORDS" = "Forced Coords List";
-"AUTORESUME" = "Auto Resume GPX";
-"NESTS" = "Nests";
+"FORCEDCOORDS" = "Forçar Lista de Coordenadas";
+"AUTORESUME" = "Retomar Rota GPX Automaticamente";
+"NESTS" = "Ninhos;
