--- a/de.strings
+++ b/de.strings
@@ -1,10 +1,10 @@
-﻿"HEY_THERE_ALERT" = "Hey There!";
-"NO_THANKS_ALERT" = "No Thanks";
+﻿"HEY_THERE_ALERT" = "Hallo!";
+"NO_THANKS_ALERT" = "Nein, danke!";
 "TWEET_TO_REMOVE_ADS" = "Tweeting will remove YT ++ ads for 1.5 weeks. You can tweet for FREE every week. Your support is awesome!";
-"MISSING_INFORMATION" = "Missing Information";
-"FILL_OUT_ALL_INFO" = "Make sure you fill out all of the information!";
-"PAYMENT_THANK_YOU_TITLE" = "Thanks!";
-"PAYMENT_CONFIRMATION" = "You have removed ads for YT ++ forvever. Thanks for your support it means a ton!";
+"MISSING_INFORMATION" = "Fehlende Angaben";
+"FILL_OUT_ALL_INFO" = "Vergewissere dich, dass du alle Felder ausgefüllt hast!";
+"PAYMENT_THANK_YOU_TITLE" = "Vielen Dank!";
+"PAYMENT_CONFIRMATION" = "Du hast alle Werbeeinblendungen in YT++ entfernt. Danke für deine Unterstützung!";
 "PAYMENT_OK" = "Okay!";
 "WALKING" = "Laufen";
 "RUNNING" = "Rennen";
@@ -27,7 +27,7 @@
 "DISMISSWALK" = "Karte bei Klick auf „Hierhin laufen“ verwerfen";
 "ENABLETELE" = "Teleportieren aktivieren.";
 "WARNING" = "Warnung!";
-"TELEDESC" = "Teleportieren kann einer zu einer Sperrung deines Accounts durch Niantic führen. Wir sind nicht verantwortlich, wenn das Teleportieren zu jeglicher Art von Bann führt. Du wurdest gewarnt.";
+"TELEDESC" = "Teleportieren kann zu einer Sperrung deines Accounts durch Niantic führen. Wir sind nicht verantwortlich, wenn das Teleportieren zu jeglicher Art von Bann führt. Du wurdest gewarnt.";
 "OK" = "Ok";
 "CANCEL" = "Abbrechen";
 "CLOSE" = "Schließen";
@@ -36,7 +36,7 @@
 "IVLENGTH" = "Dauer der IV-Benachrichtigung";
 "IVLENGTHDESC" = "Gib ein (Zeit in Millisekunden), wie lange die Benachrichtigung für IV und Moveset angezeigt wird, wenn du ein Pokemon fängst. ";
 "FAKELOCATION" = "Standort fälschen";
-"SAVEFAKE" = "Zeit, den Standort zu speichern";
+"SAVEFAKE" = "Standortspeicherzeit ";
 "SAVEFAKEDESC" = "Wie lange nach Beenden der App soll der Standpunkt gespeichert werden.";
 "SHOWCOORDS" = "Zeige die Koordinaten auf der Karte";
 "SHOWCOORDSDESC" = "Aktiviert die Koordinaten auf der Karte. Wenn geklickt, erscheint ein Popup mit deinen aktuellen Koordinaten. Die Koordinaten können kopiert werden.";
@@ -77,8 +77,8 @@
 "LANGUAGE" = "Sprache";
 "ENABLEGET" = "Radar 2.0 Kartenabholung aktivieren";
 "ENABLEGETDESC" = "Radar 2.0 Pokemon, Turnhalle und Pokestop Datei auf Zentralserver abholen";
-"JOYSTICKDELTA" = "Joystick Y abschieben +/-";
-"JOYSTICKDELTAX" = "Joystick X abschieben +/-";
+"JOYSTICKDELTA" = "Joystick Y verschieben +/-";
+"JOYSTICKDELTAX" = "Joystick X verschieben +/-";
 "SAVE" = "Speichern";
 "ROUTESMENU" = "Wegmenü";
 "START" = "Anfangen";
@@ -86,54 +86,54 @@
 "EDIT" = "Wegdatei editieren";
 "STOP" = "Halt";
 "ACTIVATE" = "Unterstützer Version aktivieren";
-"PATREON" = "Activate with Patreon";
-"DISCORDA" = "Activate with Discord";
+"PATREON" = "Aktivieren via Patreon";
+"DISCORDA" = "Aktivieren via Discord";
 "DEEPLINK" = "Deep Linking";
 "GPX" = "GPX Routing";
-"NODONOR" = "You are currently not a donor or you have a Mapping License activated. Some features in PokeGo++ requires full donor access to work properly. Please consider supporting us.";
-"LOGOUT" = "Logout";
-"ACTIVATED" = "Donor Version Activated";
+"NODONOR" = "Du bist derzeit kein Unterstützer oder verfügst über eine Mapping Lizenz. Einige Funktionen in PokeGo++ benötigien vollständigen Unterstützerzugriff, um ordnungsgemäß zu funktionieren. Bitte erwäge, uns zu unterstützen.";
+"LOGOUT" = "Abmelden";
+"ACTIVATED" = "Unterstützer-Version aktiviert";
 "NOTADONOR" = "Du bist derzeit kein Unterstützer. Bitte unterstütze uns mit deiner Spende über den Link in den Einstellungen. Wenn du bereits gespendet hast, kann es einige Zeit in Anspruch nehmen, bis dein Status bei Discord aktualisiert wurde. Solltest du weiterhin Probleme haben, besuche uns auf Reddit oder Discord.";
 "STATUS" = "Status";
 "AUTOHOME" = "Verbesserter Wurf";
-"CUSTOMSPEED" = "Custom Speed (0-16)";
-"HIDEGYM" = "Hide Gym Mode Button";
-"SPECIALLIST" = "Special Pokémon List";
+"CUSTOMSPEED" = "Benutzerdefinierte Geschwindigkeit (0-16)";
+"HIDEGYM" = "Versteck Arena-Modus Schaltfläche";
+"SPECIALLIST" = "Spezielle Pokémon-Liste";
 "COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Hide Cooldown Timer Button";
-"HIDETAPTOWALK" = "Hide Tap to Walk Button";
-"HIDEGPX" = "Hide GPX Button";
-"HIDEPREVIOUSLOC" = "Hide Previous Button";
-"HIDEIV" = "Hide IV Button";
-"PARTNERCOORDS" = "Partners";
-"PARTNERPARAMS" = "Options";
-"PARTNERCOORDSDESC" = "For access to these premium coords, you may require a subscription. Please contact the provider directly.";
-"OVERRIDE"= "Startup/Forever";
-"FORCEUPDATES" = "Force Location Updates";
+"HIDECOOLDOWN" = "Verstecke Cooldown Timer Schaltfläche";
+"HIDETAPTOWALK" = "Verstecke Tippe-zum-Gehen-Schaltfläche";
+"HIDEGPX" = "Verstecke GPX Schaltfläche";
+"HIDEPREVIOUSLOC" = "Verstecke Rücksprung-Schaltfläche";
+"HIDEIV" = "Verstecke IV-Schaltfläche";
+"PARTNERCOORDS" = "Partner";
+"PARTNERPARAMS" = "Optionen";
+"PARTNERCOORDSDESC" = "Um auf Premium-Koordinatoen zuzugreifen, ist möglichweise ein Abo notwendig. Bitte kontaktiere direkt den Anbieter.";
+"OVERRIDE"= "App-Start/Für immer";
+"FORCEUPDATES" = "Erzwinge Positions-Update";
 "SPOOFING" = "Spoofing";
 "KEY" = "Key";
-"PREVIOUSLOCATION" = "Previous Location";
-"GENERATEGPX" = "Generate GPX";
-"SECONDARY" = "Secondary Device";
-"SECONDARYMSG" = "Are you activating a second device? (Tier 2 License Required)";
-"HELP" = "HELP";
-"NEEDHELP" = "Need Help?";
-"ASIAFIX" = "Asia Patreon Fix";
+"PREVIOUSLOCATION" = "Vorherige Position";
+"GENERATEGPX" = "Generiere GPX";
+"SECONDARY" = "Zweitgerät";
+"SECONDARYMSG" = "Aktivierst du ein Zweitgerät? (Tier 2 notwendig)";
+"HELP" = "HILFE";
+"NEEDHELP" = "Benötigst du Hilfe?";
+"ASIAFIX" = "Asien Patreon Fix";
 "HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Enable Worker Mode";
+"ENABLEWORKER" = "Aktiviere Worker Modus";
 "SENDPROTOS" = "Send Raw Protos";
-"FREQUENCY" = "Frequency (Seconds)";
+"FREQUENCY" = "Frequenz (in Sekunden)";
 "ENABLEFETCH" = "Enable Location Fetch";
 "COORDSGEN" = "Coords Generator";
 "POKEMON" = "Pokemon";
 "RAIDS" = "Raids";
 "QUESTS" = "Quests";
-"YES" = "Yes";
-"NO" = "No";
-"AUTOGENERATE" = "Auto Generate";
-"DRAWGPX" = "Draw GPX Route";
-"STARTUPFOREVER" = "Startup/Forever";
-"COOLDOWN" = "Cooldown Timer";
+"YES" = "Ja";
+"NO" = "Nein";
+"AUTOGENERATE" = "Auto.Generieren";
+"DRAWGPX" = "Zeichne GPX Route";
+"STARTUPFOREVER" = "Appstart/Für immer";
+"COOLDOWN" = "Abkühl-Timer";
 "FORCEDCOORDS" = "Forced Coords List";
-"AUTORESUME" = "Auto Resume GPX";
-"NESTS" = "Nests";
+"AUTORESUME" = "GPX automatisch fortsetzen";
+"NESTS" = "Nester";
