--- a/it.strings
+++ b/it.strings
@@ -1,4 +1,4 @@
-﻿"WELCOME" = "Benvenuto in PokeGo++ 2.0!";
+"WELCOME" = "Benvenuto in PokeGo++ 2.0!";
 "MSG" = "Speriamo che ti divertirai ad utilizzare questo tweak!\n\nPer aggiornamenti e maggiori informazioni su come usare questo tweak, abbiamo pubblicato delle guide su Discord e Reddit.\nAssicurati di scaricare il tweak direttamente da noi!\n\nSe ti piace questo tweak, considera una donazione per permetterci di migliorarlo sempre di più e tenerlo sempre aggiornato!";
 "WALKING" = "Cammina";
 "RUNNING" = "Corri";
@@ -14,9 +14,9 @@
 "45MINUTE" = "45 minuti";
 "FOREVER" = "Sempre";
 "DONATE" = "Dona";
-"SUPPORTUS" = "Clicca per supportarci";
+"SUPPORTUS" = "Tocca qui per supportarci";
 "SUPPORTUSDESC" = "Aiuta a sostenere PokeGo++ 2.0! Supporta il nostro team e gli sviluppatori facendo una donazione.";
-"USAGE" = "Opzioni d'uso";
+"USAGE" = "Opzioni principali";
 "SHOWJOY" = "Mostra il joystick";
 "DISMISSWALK" = "Nascondi la mappa dopo aver toccato \"Cammina qui\"";
 "ENABLETELE" = "Abilita il teletrasporto";
@@ -56,12 +56,12 @@
 "CONTINUE" = "Continua";
 "COORDSLIST" = "Lista coordinate";
 "HIDEMENU" = "Nascondi menu";
-"HIDEMENUDESC" = "Per mostrare di nuovo il menu, fai un triplo tocco sullo schermo";
+"HIDEMENUDESC" = "Per mostrare di nuovo il menu, tocca tre volte lo schermo";
 "X8" = "Muoversi a questa velocità per diversi secondi potrebbe causare la scomparsa di tutti i pokémon dallo schermo e la disabilitazione dei pokestop. Questo è conosciuto come soft ban. Se ciò accade dovrai aspettare qualche minuto prima di ricominciare a giocare.";
-"PATROLENABLED" = "Modalità \"Pattugliamento\" abilitata";
+"PATROLENABLED" = "\"Pattugliamento\" abilitato";
 "ENTERCOORDS" = "Inserisci coordinate";
 "RETURNHOME" = "Torna a casa";
-"PATROLDESC" = "Attualmente sei in modalità \"Pattugliamento\". Devi disattivare la modalità \"Pattugliamento\" prima di effettuare lo \"Sniping\"";
+"PATROLDESC" = "Attualmente stai \"Pattugliando\". Devi disattivare il \"Pattugliamento\" prima di effettuare lo \"Sniping\"";
 "WALKHERE" = "Vai qui";
 "TELEPORTHERE" = "Teletrasporta qui";
 "TELEPORT" = "Teletrasporto";
@@ -78,7 +78,7 @@
 "START" = "Avvia";
 "RESUME" = "Riprendi";
 "EDIT" = "Modifica il file rotta";
-"STOP" = "Stop";
+"STOP" = "Arresta";
 "ACTIVATE" = "Attiva stato donatore";
 "PATREON" = "Attiva con Patreon";
 "DISCORDA" = "Attiva con Discord";
@@ -96,11 +96,11 @@
 "COOLDOWN" = "Cronometro per la ricarica";
 "HIDECOOLDOWN" = "Nascondi il pulsante \"Cronometro per la ricarica\"";
 "HIDETAPTOWALK" = "Nascondi il pulsante \"Tocca per camminare\"";
-"HIDEGPX" = "Nascondi il pulsante GPX";
+"HIDEGPX" = "Nascondi il pulsante \"GPX\"";
 "HIDEPREVIOUSLOC" = "Nascondi il pulsante \"Torna indietro\"";
-"HIDEIV" = "Nascondi il pulsante IV";
+"HIDEIV" = "Nascondi il pulsante \"IV\"";
 "PARTNERCOORDS" = "Partners";
-"PARTNERPARAMS" = "Opzioni";
+"PARTNERPARAMS" = "Altri";
 "PARTNERCOORDSDESC" = "Per accedere a queste coordinate premium, potresti aver bisogno di un abbonamento. Per favore contatta direttamente il fornitore.";
 "OVERRIDE"= "Avvio/Sempre";
 "FORCEUPDATES" = "Forza aggiornamenti posizione";
@@ -110,24 +110,24 @@
 "GENERATEGPX" = "Genera GPX";
 "SECONDARY" = "Dispositivo secondario";
 "SECONDARYMSG" = "Stai attivando un dispositivo secondario? (Richiede licenza di \"Livello 2\")";
-"HELP" = "HELP";
-"NEEDHELP" = "Need Help?";
-"ASIAFIX" = "Asia Patreon Fix";
-"HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Enable Worker Mode";
-"SENDPROTOS" = "Send Raw Protos";
-"FREQUENCY" = "Frequency (Seconds)";
-"ENABLEFETCH" = "Enable Location Fetch";
-"COORDSGEN" = "Coords Generator";
-"POKEMON" = "Pokemon";
+"HELP" = "Aiuto";
+"NEEDHELP" = "Hai bisogno di aiuto?";
+"ASIAFIX" = "Aggiustamento Patreon asiatico";
+"HOSTMAP" = "Fai da host per la tua mappa";
+"ENABLEWORKER" = "Abilita modalità \"Lavoratore\"";
+"SENDPROTOS" = "Invia protocolli grezzi";
+"FREQUENCY" = "Frequenza (Secondi)";
+"ENABLEFETCH" = "Abilita prelievo di posizione";
+"COORDSGEN" = "Generatore di coordinate";
+"POKEMON" = "Pokémon";
 "RAIDS" = "Raids";
-"QUESTS" = "Quests";
-"YES" = "Yes";
+"QUESTS" = "Ricerche";
+"YES" = "Si";
 "NO" = "No";
-"AUTOGENERATE" = "Auto Generate";
-"DRAWGPX" = "Draw GPX Route";
-"STARTUPFOREVER" = "Startup/Forever";
-"COOLDOWN" = "Cooldown Timer";
-"FORCEDCOORDS" = "Forced Coords List";
-"AUTORESUME" = "Auto Resume GPX";
-"NESTS" = "Nests";
+"AUTOGENERATE" = "Genera automaticamente";
+"DRAWGPX" = "Disegna rotta GPX";
+"STARTUPFOREVER" = "Avvio/Sempre";
+"COOLDOWN" = "Cronometro per la ricarica";
+"FORCEDCOORDS" = "Forza lista coordinate";
+"AUTORESUME" = "Riprendi automaticamente il GPX";
+"NESTS" = "Nidi";
