--- a/de.strings
+++ b/de.strings
@@ -50,7 +50,7 @@
 "PRIVACY" = "Datenschutz";
 "TOS" = "Nutzungsbedingungen ";
 "TOSDESC" = "Danke, dass du unsere Nutzungsbedingungen akzeptierst. Du kannst jederzeit ein Feedback hinterlassen. Fröhliches Fangen!";
-"CREDITS" = "Credits";
+"CREDITS" = "CREDITS";
 "NIANTIC" = "Nianctic Labs";
 "NIANTICDESC" = "For missing key features including location spoofing, controls, walk-to map, teleporting, IV calculation and more!!!\n\nPokeGo++ 2.0 is based on PokeGoAnywhere / PokeGo++ by miniroo321.";
 "RADAR" = "Radar";
@@ -71,7 +71,7 @@
 "TELEPORTHERE" = "Hierhin teleportieren";
 "TELEPORT" = "Teleportieren";
 "PATROLDESC" = "Du patrouillierst momentan. Du musst deine Patrouille stoppen, bevor du die Snipe-Funktion benutzen kannst.";
-"EXECUTESNIPE" = "Gehen Snipe?";
+"EXECUTESNIPE" = "Snipe Ausführen?";
 "COORDINATES" = "Koordinaten";
 "LOCALIZATION" = "Lokalisierung";
 "LANGUAGE" = "Sprache";
@@ -86,8 +86,8 @@
 "EDIT" = "Wegdatei editieren";
 "STOP" = "Halt";
 "ACTIVATE" = "Unterstützer Version aktivieren";
-"PATREON" = "Aktivieren via Patreon";
-"DISCORDA" = "Aktivieren via Discord";
+"PATREON" = "Aktivieren durch Patreon";
+"DISCORDA" = "Aktivieren durch Discord";
 "DEEPLINK" = "Deep Linking";
 "GPX" = "GPX Routing";
 "NODONOR" = "Du bist derzeit kein Unterstützer oder verfügst über eine Mapping Lizenz. Einige Funktionen in PokeGo++ benötigien vollständigen Unterstützerzugriff, um ordnungsgemäß zu funktionieren. Bitte erwäge, uns zu unterstützen.";
@@ -99,8 +99,8 @@
 "CUSTOMSPEED" = "Benutzerdefinierte Geschwindigkeit (0-16)";
 "HIDEGYM" = "Versteck Arena-Modus Schaltfläche";
 "SPECIALLIST" = "Spezielle Pokémon-Liste";
-"COOLDOWN" = "Cooldown Timer";
-"HIDECOOLDOWN" = "Verstecke Cooldown Timer Schaltfläche";
+"COOLDOWN" = "Abklingzeit";
+"HIDECOOLDOWN" = "Verstecke Abklingzeit Schaltfläche";
 "HIDETAPTOWALK" = "Verstecke Tippe-zum-Gehen-Schaltfläche";
 "HIDEGPX" = "Verstecke GPX Schaltfläche";
 "HIDEPREVIOUSLOC" = "Verstecke Rücksprung-Schaltfläche";
@@ -108,10 +108,10 @@
 "PARTNERCOORDS" = "Partner";
 "PARTNERPARAMS" = "Optionen";
 "PARTNERCOORDSDESC" = "Um auf Premium-Koordinatoen zuzugreifen, ist möglichweise ein Abo notwendig. Bitte kontaktiere direkt den Anbieter.";
-"OVERRIDE"= "App-Start/Für immer";
+"OVERRIDE"= "Von App-Start / Für immer";
 "FORCEUPDATES" = "Erzwinge Positions-Update";
 "SPOOFING" = "Spoofing";
-"KEY" = "Key";
+"KEY" = "Schlüssel";
 "PREVIOUSLOCATION" = "Vorherige Position";
 "GENERATEGPX" = "Generiere GPX";
 "SECONDARY" = "Zweitgerät";
@@ -119,21 +119,21 @@
 "HELP" = "HILFE";
 "NEEDHELP" = "Benötigst du Hilfe?";
 "ASIAFIX" = "Asien Patreon Fix";
-"HOSTMAP" = "Host you own Map";
-"ENABLEWORKER" = "Aktiviere Worker Modus";
-"SENDPROTOS" = "Send Raw Protos";
+"HOSTMAP" = "Hoste deine eigene Karte";
+"ENABLEWORKER" = "Aktiviere Arbeiter Modus";
+"SENDPROTOS" = "Sende Raw Protos";
 "FREQUENCY" = "Frequenz (in Sekunden)";
-"ENABLEFETCH" = "Enable Location Fetch";
-"COORDSGEN" = "Coords Generator";
+"ENABLEFETCH" = "Aktiviere Standorterfassung";
+"COORDSGEN" = "Koordinaten Generator";
 "POKEMON" = "Pokemon";
 "RAIDS" = "Raids";
 "QUESTS" = "Quests";
 "YES" = "Ja";
 "NO" = "Nein";
 "AUTOGENERATE" = "Auto.Generieren";
-"DRAWGPX" = "Zeichne GPX Route";
+"DRAWGPX" = "Zeichne GPX Strecke";
 "STARTUPFOREVER" = "Appstart/Für immer";
-"COOLDOWN" = "Abkühl-Timer";
-"FORCEDCOORDS" = "Forced Coords List";
+"COOLDOWN" = "Abklingzeit";
+"FORCEDCOORDS" = "Liste erzwungener Koordinaten";
 "AUTORESUME" = "GPX automatisch fortsetzen";
 "NESTS" = "Nester";
